k8s/manifests/wordpress/wordpress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: wordpress
  name: mariadb
spec:
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress
spec:
  ports:
    - port: 9000
  selector:
    app: wordpress
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: wordpress
  name: wordpress
spec:
  serviceName: wordpress
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.5-fpm
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: www-data
              mountPath: /var/www/html
      volumes:
        - name: www-data
          persistentVolumeClaim:
            claimName: www-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  name: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: www-data
              mountPath: /var/www/html
              readOnly: true
            - name: nginx-configs
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: www-data
          persistentVolumeClaim:
            claimName: www-data
        - name: nginx-configs
          configMap:
            name: nginx.conf.d
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: nginx
spec:
  ports:
    - port: 80
  selector:
    app: nginx
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: wordpress
  name: wordpress
spec:
  parentRefs:
    - namespace: default
      name: private-gateway
      sectionName: websecure
    - name: public-gateway
      namespace: internet
      sectionName: webpublic
  hostnames:
    - bakingchallenge.o.cavnet.cloud
    - bakingchallenge.cavnet.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
